# AD2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main  main.cpp  main.py
apps/: csv_statistics.py  main.cpp  main.py
src/: bindings.cpp  csv_bindings.cpp  csv_parser.cpp  csv_parser.hpp  csv_statistics.py  csv_stats.py  statistics.cpp  statistics.hpp  stats_bindings.cpp
